div line was added

--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<div> Hi there</div>
-<p>p tag is added in main branch</p>
-<h1>Header line 1 is added testing feature branch</h1>
-<h4>h4 header is added</h4>
+<div>Initial line under div</div>
